--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -3,6 +3,14 @@
 * Created by: Andrey Alda
 */
 
+
+/* General */
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+
+body{
+	font-family: 'Raleway', sans-serif;
+}
+
 /* Header */
 header{
 	background:#2eabae;
@@ -37,6 +45,63 @@ ul.main-navigation{
 .main-navigation a{
 	font-size:24px;
 }
+
+/* Homepage */
+
+.score-section {
+    width: 100%;
+    float: left;
+	margin-bottom:20px;
+}
+
+.ratings-star {
+	float:left;
+}
+.score {
+    color: #63b446;
+    font-weight: bold;
+    display: inline-block;
+    float: left;
+}
+
+.company-name {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #176383;
+	margin-bottom:0px;
+}
+
+.date-founded {
+    font-size: 16px;
+    font-weight: bold;
+    color: #de4407;
+    margin-bottom: 20px;
+}
+
+.rate-btn {
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #de4407;
+    font-weight: bold;
+}
+
+.rate-btn:hover {
+	text-decoration:none;
+}
+
+.company-desc {
+    font-size: 16px;
+    color: #636363;
+}
+
+.company-profile {
+    margin: 20px 20px 80px;
+    padding: 10px 10px 0px;
+    border-bottom: 1px solid #000;
+}
+
+
 /* Form - Registration */
 input {
     width: 100%;
@@ -70,4 +135,19 @@ input[type="submit"] {
     background: #ff0;
     border: 0;
     text-transform: uppercase;
+}
+
+/* footer */
+footer{
+	background: #30373A;
+	color:#ffffff;
+	border-top:1px solid #4F5A60;
+}
+	
+/* copyright */
+.copyright {
+	text-align: right;
+	font-size: 11px;
+	line-height: 32px;
+	margin:0;
 }
