--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -11,18 +11,30 @@ body{
 	font-family: 'Raleway', sans-serif;
 }
 
+p.alternative-font-style{
+	font-family:'Lato', sans-serif;
+}
+
+/* 
+Insert fonts for all text types 
+EX: H1,H2,H3,H4,H5,H6,blockquote, etc... 
+*/
+
+body.alt{
+	background: #D3D3D3;
+
+}
 /* Header */
 header{
 	background:#2eabae;
 }
 
 header.alt{
-	background:white;
+	background: #D3D3D3;
 }
 
 header.alt .box-type{
-	border: 1px solid #000;
-	background: #2eabae;
+	
 	margin-top:40px;
 	-webkit-border-top-left-radius: 30px;
 	-webkit-border-top-right-radius: 30px;
@@ -32,9 +44,19 @@ header.alt .box-type{
 	border-top-right-radius: 30px;
 }
 
+/* Logo START */
 .logo{
-	padding:40px 20px 50px;
+	padding:40px 20px 20px;
 }
+
+.logo img{
+	max-width:300px;
+	width:100%;
+	display:block;
+	margin:0 auto;
+}
+/* Logo END */
+
 
 /* Navigation */
 
@@ -129,6 +151,7 @@ section.alt {
 
 
 /* Form - Registration */
+
 input {
     width: 100%;
     padding: 5px;
@@ -157,20 +180,45 @@ label {
     margin-bottom: 0px;
 }
 
-input[type="submit"] {
-	font-size:24px;
+div.login-button-group{
+	width:50%;
+}
+
+input[type="submit"],button {
+	font-size:18px;
     font-weight: bold;
     padding: 10px 10px;
     margin-top: 10px;
-    background: #ff0;
+    background: #3399CC;
     border: 0;
     text-transform: uppercase;
+	max-width:200px;
+	width:100%;
+	float:right;
+	display:block;
+}
+
+input[type="submit"]:hover,button:hover {
+    background: #37FDFC;
+
 }
 /* Login Page*/
 section .box-type{
-	border-left:1px solid #000;
-	border-right:1px solid #000;	
 	padding: 40px 20px;
+	background:#ffffff;
+}
+
+label.check {
+    float: left;
+    display: inline-block;
+	font-weight:normal;
+}
+
+#remember {
+    display: inline;
+    float: left;
+    width: 20px;
+    margin: 10px 2px;
 }
 
 /* Reviews Page*/
@@ -194,20 +242,12 @@ footer{
 }
 
 footer.alt{
-	background: white;
-	color:#ffffff;
+	background: #D3D3D3;
+	color:#000000;
 	border-top:none;
 }
 
 footer.alt .box-type{
-	background:#000;
-	border:1px solid #000;
-	-webkit-border-bottom-right-radius: 30px;
-	-webkit-border-bottom-left-radius: 30px;
-	-moz-border-radius-bottomright: 30px;
-	-moz-border-radius-bottomleft: 30px;
-	border-bottom-right-radius: 30px;
-	border-bottom-left-radius: 30px;
 }
 	
 /* copyright */
